# srt-router

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: example.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/media-io/: Cargo.toml
crates/media-io/src/: lib.rs
crates/media-io/tests/: relay.rs
crates/ndi-io/: Cargo.toml
crates/ndi-io/src/: envelope.rs  lib.rs
crates/ndi-io/tests/: relay.rs
crates/omt-io/: Cargo.toml  build.rs
crates/omt-io/src/: envelope.rs  lib.rs  sys.rs
crates/omt-io/tests/: relay.rs
crates/router/: Cargo.toml  build.rs
crates/router/src/: config.rs  main.rs  management.rs  registry.rs  state.rs
crates/srt-io/: Cargo.toml
crates/srt-io/src/: lib.rs
crates/srt-io/tests/: relay.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
crates/web/static/: index.html
docs/: architecture.md  roadmap.md
launcher/: .gitignore  README.md  package-lock.json  package.json
launcher/scripts/: prepare.sh  screenshot.sh
launcher/src/: index.html  main.js  styles.css
launcher/src-tauri/: Cargo.toml  launcher.toml  tauri.conf.json
launcher/src-tauri/src/: config.rs  lib.rs  main.rs
