[package]
name = "omt-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crosspoint-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tokio-util = "0.7"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
