[package]
name = "srtrouter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "srtrouter"
path = "src/main.rs"

[dependencies]
crosspoint-core = { path = "../core" }
srt-io = { path = "../srt-io" }
crosspoint-web = { path = "../web" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
