[package]
name = "srtrouter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "srtrouter"
path = "src/main.rs"

[dependencies]
crosspoint-core = { path = "../core" }
srt-io = { path = "../srt-io" }
ndi-io = { path = "../ndi-io", optional = true }
omt-io = { path = "../omt-io", optional = true }
media-io = { path = "../media-io" }
crosspoint-web = { path = "../web" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
ndi = ["dep:ndi-io"]
omt = ["dep:omt-io"]
