[package]
name = "srt-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crosspoint-core = { path = "../core" }
srt-tokio = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
