[package]
name = "av-launcher"
version = "0.1.0"
description = "Companion-style tray launcher for local web-server apps"
authors = ["Allan Sargeant"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "av_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Network interface enumeration for the GUI Interface picker.
if-addrs = "0.13"
# Parse our own launcher.toml (serde).
toml = "0.8"
# Comment-preserving TOML editing so we can patch an app's config file
# (e.g. srt-router's `[web] bind`) without destroying its formatting.
toml_edit = "0.22"

# Standalone: keep this out of any parent app cargo workspace.
[workspace]
